--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,6 @@ modules.xml
 .idea/sonarlint
 
 # End of https://www.toptal.com/developers/gitignore/api/rails,ruby,rubymine+all
+
+# Database
+config/database.yml
