--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: usuario
-  password: usuario
+  username: jblanco
+  password: jblanco
   socket: /var/run/mysqld/mysqld.sock
 
 development:
