--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "expose-loader": "^1.0.0",
+    "jquery": "^3.5.1",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0"
   },
